# SFML_GUI

./: CMakeLists.txt  CMakePresets.json  README.md
SFML_GUI/: CMakeLists.txt  SFML_GUI.cpp  SFML_GUI.h
SFML_GUI/include/SFML_GUI/: UIElements.h  UIManager.h
SFML_GUI/include/SFML_GUI/style/: FontManager.h
SFML_GUI/include/SFML_GUI/widgets/: Button.h  Container.h  Input.h  Panel.h  Widgets.hpp
SFML_GUI/src/core/: UIManager.cpp
SFML_GUI/src/style/: FontManager.cpp
SFML_GUI/src/widget/: Button.cpp  Container.cpp  Input.cpp  Panel.cpp
examples/: CMakeLists.txt  main.cpp
